2018-08-22  Francesco Grieco  <francesco.grieco@chalmers.se>
	
	* Build_scripts/runscript.m: Added Q.FOLDER_MIPAS.

2018-06-20  Francesco Grieco  <francesco.grieco@chalmers.se>

	* Mscripts_database/q2_get_atm.m: Added case 'MIPAS' to use MIPAS 
	climatology as a priori for CO retrievals.

	* Mscripts_atmlab/*: Created *load_co_vmr_mipas* function.

2018-04-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_filter.m: Removed outdated info in header.

2018-04-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts.m (q2_arts): Used newline, which turned
	out to be a new matlab feature, not present in the version used by
	others. Replaced by sprintf('\n').

2018-04-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_oemiter.m: Now handles Q.FREQUENCY.NPOLY.

	* Mscripts_arts/q2_inv.m (subfun4l2): L2I.FreqOffset is now a vector.
	(subfun4retqs): Now handles Q.FREQUENCY.NPOLY.

2018-04-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/q2_check_l1b.m: Removed check that LO is
	inside of 100 MHz of nominal value. This simply does not work for
	CO data with non-fixed frequencies.
	Added instead check of L1B.Frequncy, after tracking down a problem
	to bad index in L1B.Frequency.SubBandIndex.

	* Mscripts_arts/q2_arts.m: The full error string from ARTS is now
	given to Matlab's error. For inversions this means that the ARTS
	error ends up in L2C.

2017-12-13  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: Added settings for 19, tweaked for 17.

2017-12-06  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: Fixed settings for FM 13

2017-11-27  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: Added settings for FMs 1, 2 and 13

2017-10-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts.m: Removed incorrect information in header
	text.
